# nautilus-ts

./: CLAUDE.md  Containerfile  Makefile  README.md  package.json
.github/workflows/: reproducibility.yml  test.yml
argonaut/: main.go  main_test.go
enclave/nsm-ffi/src/: lib.rs
enclave/traffic-forwarder/: Cargo.toml
enclave/traffic-forwarder/src/: main.rs
scripts/: check-reproducibility.ts  ci-smoke-test.sh  enclave-smoke-test.sh
src/: nautilus.ts  server-elysia.ts  server-hono.ts  server.ts
src/core/: config.ts  index.ts  network.ts  vsock.ts
src/nsm/: index.ts
tests/: config.test.ts  crypto.test.ts  nautilus.test.ts  nsm.test.ts
tests/fixtures/: mock-nsm-err.ts  mock-nsm-large.ts  mock-nsm-proxy.ts
tools/nsm-proxy/: Cargo.toml
tools/nsm-proxy/src/: main.rs
tools/traffic-proxy/: go.mod  main.go  main_test.go
