[package]
name = "traffic-forwarder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "traffic-forwarder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
tokio-vsock = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
